# swlag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
pyuwtc/: __init__.py  calc.py  io.py  meta.py  plot.py
src/: __init__.py  io.py
swlag/: __init__.py  calc.py  io.py  meta.py  plot.py  utils.py
tests/: test.py  test_io.py  test_transform.py
tests/data/: 2023-019-20230517.tob  2023-019-20230518.tob  2023-019-20230519.tob  2023-019-20230520.tob  2023-019-20230521.tob  2023-019-20230522.tob  2023-019-20230523.tob  2023-019-20230524.tob  2023-019-20230525.tob  2023-026-20230825.tob  2023-026-20230826.tob  2023-026-20230827.tob  2023-026-20230828.tob  2023-026-20230829.tob  2023-026-20230903.tob  2023-026-20230904.tob  example.csv
